src/objects/Festival__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tickets_Sold__c</fullName>
        <formula>general_tickets_sold__c  +  VIP_Tickets_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tickets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_Tickets_Sold__c</fullName>
        <label>VIP Tickets Sold</label>
        <summarizedField>Attendee__c.Tickets_Purchased__c</summarizedField>
        <summaryFilterItems>
            <field>Attendee__c.ticket_type__c</field>
            <operation>equals</operation>
            <value>vip</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.Festival__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>general_tickets_sold__c</fullName>
        <label>general tickets sold</label>
        <summarizedField>Attendee__c.Tickets_Purchased__c</summarizedField>
        <summaryFilterItems>
            <field>Attendee__c.ticket_type__c</field>
            <operation>equals</operation>
            <value>general</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.Festival__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Festival</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Festival Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Festival</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>